vlib/v/checker/tests/array_prepend_type_mismatch_a.vv
fn main() {
	mut a := [1, 2]
	a.prepend(2.3)
	println(a)
}
